# agent-template

./: .env_example  .gitignore  README.md  README_pt_Br.md  exemplo-empacotador.py  pyproject.toml
agents/: agent.py  agent_mock.py
ai_platform/: __init__.py  tracking.py
app/: agent.py  agent_mock.py
config/: __init__.py  app_config.py  judge_config.py  tracking.py
dataset/: register_dataset.py
docker/: docker-compose.yml
docker/mlflow_data/: mlflow.db
docker/mlflow_data/artifacts/5/2f1c7e03b39d462e8231b8092fac9271/artifacts/input/: user_message.txt
docker/mlflow_data/artifacts/6/a934a976606e40b5875651d9a35aacbf/artifacts/output/: final_response.json
judge/: register_judge.py
model/: load_model.py  register_model.py  wrapper_model.py  ztest_model.py
prompt/: register_prompt_v1.py  register_prompt_v2.py  register_prompt_v3.py  register_prompt_v4.py
tutorial/: ETAPA_01.md  ETAPA_02.md  ETAPA_03.md  ETAPA_04.md  ETAPA_05.md  ETAPA_06.md  ETAPA_07.md  ETAPA_08.md  ETAPA_09.md  README.md
